--- a/TXON_02/txon02.css
+++ b/TXON_02/txon02.css
@@ -16,7 +16,8 @@ a {
 }
 
 body {
-    background-image: linear-gradient( to bottom right, rgba(79,51,176,1.0),rgba(210,53,165));
+   
+    background-image: linear-gradient( to bottom right, rgba(137, 196, 244,1.0),rgba(40, 67, 135));
 }
 
 .container {
